--- a/homePage.html
+++ b/homePage.html
@@ -23,7 +23,7 @@
                 <h2>Travel Guru</h2>
             </div>
             <button onclick="location.href='#explore'" class="menuButton">Explore</button>
-            <button onclick="location.href='#aboutUs' "target="_blank"class="menuButton">About us</button>
+            <button onclick="location.href='#aboutUs' "location.target="_blank"class="menuButton">About us</button>
             <button onclick="location.href='/login.html' ;location.target='_blank'"class="menuButton">Login/Signup</button>
         </div>
         <div class="displayPicture">
@@ -40,7 +40,7 @@
                     <h4><b>Manali (3 Days/4 Night)</b></h4>
                     <p>Manali is a town, near Kullu town in Kullu district in the Indian state of Himachal Pradesh</p>
                     <p>Rs 6,999/head</p>
-                    <button class="cardButton">Book</button>
+                    <button onclick="location.href='packages/manali/manaliTrip.html'"class="cardButton"id="manaliButton">Book</button>
                 </div>
             </div>
             <div class="card">
@@ -51,7 +51,7 @@
                         Baga and Palolem to those in laid-back fishing villages such as Agonda.</p>
                     <p>Rs 15,999/head</p>
 
-                    <button class="cardButton">Book</button>
+                    <button class="cardButton"id="goaButton">Book</button>
                 </div>
             </div>
             <div class="card">
@@ -63,7 +63,7 @@
                         climbing, and hiking.</p>
                     <p>Rs 12,999/head</p>
 
-                    <button class="cardButton">Book</button>
+                    <button class="cardButton" id="lonavalaButton">Book</button>
                 </div>
             </div>
             <div class="card">
@@ -73,7 +73,7 @@
                     <p>The unparalleled beauty of Kashmir offers the travellers a number of things to do. From a Shikara
                         ride in Srinagar to trekking to the alpine lakes</p>
                     <p>Rs 11,999/head</p>
-                    <button class="cardButton">Book</button>
+                    <button class="cardButton" id="kashmirButton">Book</button>
                 </div>
             </div>
          
@@ -89,6 +89,7 @@
             <h3>Shubham Pal</h3>
             <p>shubhampal1999@gmail.com</p>
         </footer>
+        <script src="homePage.js"></script>
 
 </body>
 
