--- a/login.html
+++ b/login.html
@@ -23,6 +23,8 @@
             <br>
             <button id="button-submit">Login</button>
             <br>
+            <a href="http://127.0.0.1:5501/passwordRecovery.html">Forget Password</a>
+            <br>
             <a href="http://127.0.0.1:5501/signup.html">Not a User? Sign Up</a>
             <br>
             
